- fix prefix. Now user can set custom prefix - update example page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SecurePreferences</string>
+    <string name="welcome">This is SecurePreferences demo page. Please watch the Logcat for information</string>
+    <string name="title_write_setting">Write Setting</string>
+    <string name="title_read_setting">Read Setting</string>
 </resources>
